welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:2: error: not found: value boK
  return (boK && c > b) || (a> b && c >b)
          ^